<resources>
    <string name="app_name">ToDoList</string>

    <!-- This edit task has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Describe your task&#8230;</string>
    <string name="priority">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
</resources>
